Cloning and deleting VMs
- Added buttons to clone and delete the VM when the status permit it.

- New Status: "Not created"

- New loading GIF (Work In Progress)

- Generalized Start and Stop VM functions to work with all the VMs.

--- a/style.css
+++ b/style.css
@@ -10,3 +10,7 @@
   font-weight: bold;
   color: red;
 }
+
+#w10{
+  background: url(https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif) left center no-repeat; 
+}
