New interactive panel and a lot of fixes and improvements
- Most of the stats shows in the panel are now interactive with the creation, execution and removal of the machines.

- Loading GIF that is showed when Ansible is checking the status of the machine or making some action

- Javascript code reworked and separated in different files

- New conditionals for changing the state of a machine, checking the errors that can occur

- Now the page works with multiple users working at the same time with the machines, the only problem is the creation part, but if this occurs, a explicative error is showed

--- a/style.css
+++ b/style.css
@@ -9,8 +9,31 @@
 .vmstatus{
   font-weight: bold;
   color: red;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.connect{
+  width: 70px;
+}
+
+.timer{
+  text-align: right;
+}
+
+.timer img{
+  display: block;
+  margin-bottom: 4px;
+  margin-left: 5px;
 }
 
 #w10{
-  background: url(https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif) left center no-repeat; 
+  background: url(./img/loading.gif) left center no-repeat; 
+}
+
+#u20{
+  background: url(./img/loading.gif) left center no-repeat; 
+}
+
+#d10{
+  background: url(./img/loading.gif) left center no-repeat; 
 }
